# RAGnarok

./: .gitignore  .pre-commit-config.yaml  README.md  dasd  pyproject.toml  t14.md
.github/workflows/: ci.yml
src/ragnarok/: main.py
