[project]
name = "ragnarok"
version = "0.1.0"
description = ""
authors = [
    { name = "Xingkun Fan", email = "18646154381@163.com" }
]

readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ragnarok-toolkit",
    "ragnarok-server",
    "ragnarok-core",
    "blinker>=1.9.0",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
ragnarok-toolkit = { workspace = true }
ragnarok-server = { workspace = true }
ragnarok-core = { workspace = true }

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
]

[tool.pytest.ini_options]
pythonpath = "src"
addopts = [
    "--import-mode=importlib",
]
testpaths = [
    "tests"
]
log_cli = true
log_level = "INFO"
log_cli_level = "INFO"
asyncio_default_fixture_loop_scope = "function"
